<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_delete"
    android:icon="@drawable/ic_action_discard"
    android:title="@string/delete" />
</menu>
