...
                    android:id="@+id/distributionChart"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:id="@+id/dispersionPatternLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:text="@string/dispersion_pattern"/>

                    <FrameLayout
                        android:id="@+id/dispersionViewOverlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/dispersionView"
...
