<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/fragment_main">

    <merge>

        <RelativeLayout
            android:id="@+id/new_layout"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/arrow"/>

            <TextView
                android:id="@+id/new_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/arrow"
                android:layout_centerInParent="true"
                android:paddingBottom="16dp"
                android:textColor="@color/new_text_color"
                android:textSize="25sp"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="160dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp">

            <TextView
                android:id="@+id/fab2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fab_label_background"
                android:text="@string/training_with_standard_round"
                android:textColor="@color/white"
                android:visibility="invisible"/>

        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="160dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:visibility="invisible"
            app:backgroundTint="#2196F3"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_album_24dp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp">

            <TextView
                android:id="@+id/fab1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fab_label_background"
                android:text="@string/free_training"
                android:textColor="@color/white"
                android:visibility="invisible"/>

        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:visibility="invisible"
            app:backgroundTint="#4CAF50"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_trending_up_white_24dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            app:srcCompat="@drawable/ic_add_white_24dp"/>
    </merge>

</layout>