<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2 
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fabBowYumi"
        android:icon="@drawable/ic_compat_bow_yumi_white_24dp"
        android:orderInCategory="0"
        android:title="@string/yumi"/>

    <item
        android:id="@+id/fabBowHorse"
        android:icon="@drawable/ic_compat_bow_horse_white_24dp"
        android:orderInCategory="1"
        android:title="@string/horse_bow"/>

    <item
        android:id="@+id/fabBowLong"
        android:icon="@drawable/ic_compat_bow_long_white_24dp"
        android:orderInCategory="2"
        android:title="@string/long_bow"/>

    <item
        android:id="@+id/fabBowBare"
        android:icon="@drawable/ic_compat_bow_bare_white_24dp"
        android:orderInCategory="3"
        android:title="@string/bare_bow"/>

    <item
        android:id="@+id/fabBowCompound"
        android:icon="@drawable/ic_compat_bow_compound_white_24dp"
        android:orderInCategory="4"
        android:title="@string/compound_bow"/>

    <item
        android:id="@+id/fabBowRecurve"
        android:icon="@drawable/ic_compat_bow_recurve_white_24dp"
        android:orderInCategory="5"
        android:title="@string/recurve_bow"/>

</menu>
